# battlenet-rs

./: .env-EXAMPLE  .gitignore  Cargo.toml  ModelImplementProgress-missing.md  ModelImplementProgress.md  README.md  wow_api-working.yaml  wow_api.yaml
.github/: copilot-instructions.md
.github/prompts/: speckit.analyze.prompt.md  speckit.checklist.prompt.md  speckit.clarify.prompt.md  speckit.constitution.prompt.md  speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md  speckit.tasks.prompt.md  speckit.taskstoissues.prompt.md
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  constitution.python.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
bnauth/: .env-EXAMPLE  README.md  port-troubleshoot.md  pyproject.toml
bnauth/bnauth/: app.py
bnauth/templates/: error.html  index.html  success.html
bnauth/tests/: test_app.py  test_e2e.py
docs/: Initial-Goals.md  architecture.md  installation.md  specification.md  usage.md
examples/: account-profile-cached.rs  account-profile.rs  achievements.rs  auction-play.rs  auctions.rs  char-profile.rs  character-collections.rs  character-equipment.rs  creatures.rs  full-toon.rs  get-client-token.rs  items.rs  mounts.rs  mythic-keystone.rs  pets.rs  professions.rs  pvp-seasons.rs  realms.rs  spells.rs  talents.rs
ktoons/: package.json  pnpm-lock.yaml  vitest.config.ts
ktoons/src-tauri/: Cargo.toml  tauri.conf.json
ktoons/src-tauri/capabilities/: default.json
ktoons/src-tauri/src/: commands.rs  lib.rs  main.rs  oauth.rs  state.rs
ktoons/src/lib/: commands.ts  types.ts
ktoons/src/lib/components/: CharacterHeader.svelte  CharacterNav.svelte  EquipmentPanel.svelte  ErrorDisplay.svelte  LaunchScreen.svelte  LoadingSpinner.svelte  SpecializationsPanel.svelte  StatsPanel.svelte
ktoons/src/routes/: +page.svelte
ktoons/tests/components/: CharacterHeader.test.ts  ErrorDisplay.test.ts  LaunchScreen.test.ts  PartialFailure.test.ts
model-macro/: Cargo.toml
model-macro/src/: input.rs  lib.rs
pygen/: gen_models.py  sort_model_yaml.py
pygen/models/: achievement.yaml  auction_house.yaml  core_structs.yaml
pygen/models/BACK/: achievement.yaml  core_structs.yaml
specs/001-repo-baseline-audit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-repo-baseline-audit/checklists/: requirements.md
specs/002-bnauth-oauth-helper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-bnauth-oauth-helper/checklists/: requirements.md
specs/003-lib-wow-examples/: data-model.md  plan.md  quickstart.md  research.md  spec.md  supplemental.md  tasks.md
specs/003-lib-wow-examples/checklists/: requirements.md
specs/003-lib-wow-examples/contracts/: public-api.md
specs/004-db-cache/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-db-cache/checklists/: requirements.md
specs/004-db-cache/contracts/: public-api.md
specs/005-full-toon/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-full-toon/checklists/: requirements.md
specs/005-full-toon/contracts/: public-api.md
specs/006-ktoons-gui-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-ktoons-gui-app/checklists/: requirements.md
specs/006-ktoons-gui-app/contracts/: tauri-commands.md
src/: auth.rs  client.rs  errors.rs  lib.rs  namespace.rs  rate_limiter.rs  region.rs  user_token.rs  wow_models.rs
src/cache/: cached_client.rs  mod.rs  postgres.rs  sqlite.rs
src/wow_models/: account_profile.rs  achievement.rs  auction_house.rs  azerite_essence.rs  character_achievements.rs  character_appearance.rs  character_collections.rs  character_encounters.rs  character_equipment.rs  character_hunter_pets.rs  character_media.rs  character_mythic_keystone.rs  character_professions.rs  character_profile.rs  character_pvp.rs  character_quests.rs  character_reputations.rs  character_soulbinds.rs  character_specializations.rs  character_statistics.rs  character_titles.rs  connected_realm.rs  core_other.rs  core_structs.rs  covenant.rs  creature.rs  full_character.rs  guild.rs  heirloom.rs  item.rs  journal.rs  media_search.rs  modified_crafting.rs  mount.rs  mythic_keystone.rs  pet.rs  playable_class.rs  playable_race.rs  playable_spec.rs  power_type.rs  (+11 more)
tests/: achievements_test.rs  cache_test.rs  common.rs  connected_realm_test.rs  feature_flags_test.rs  full_character_test.rs  rate_limiter_test.rs  serialize_test.rs  user_token_test.rs  wow_token_test.rs
