[package]
name = "battlenet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"
num-format = "0.4.4"
reqwest = { version = "0.12.4", features = ["multipart", "json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
time = "0.3.36"
tokio = { version = "1.37.0", features = ["full"] }

# model_macro helps generate boilerplate code for the models
model-macro = { path = "./model-macro" }
