[package]
name = "battlenet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wow = []
user = []
redis = ["dep:redis"]
wow-classic = []
diablo = []
hearthstone = []
starcraft = []

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"
num-format = "0.4.4"
redis = { version = "0.27", optional = true }
reqwest = { version = "0.12.4", features = ["multipart", "json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
time = "0.3.36"
tokio = { version = "1.37.0", features = ["full"] }

# model_macro helps generate boilerplate code for the models
model-macro = { path = "./model-macro" }

[[example]]
name = "get-client-token"
required-features = ["wow"]

[[example]]
name = "char-profile"
required-features = ["wow", "user"]

[[example]]
name = "auction-play"
required-features = ["wow"]

[[example]]
name = "mounts"
required-features = ["wow"]

[[example]]
name = "items"
required-features = ["wow"]

[[example]]
name = "achievements"
required-features = ["wow"]

[[example]]
name = "professions"
required-features = ["wow"]

[[example]]
name = "pvp-seasons"
required-features = ["wow"]

[[example]]
name = "realms"
required-features = ["wow"]

[[example]]
name = "creatures"
required-features = ["wow"]

[[example]]
name = "spells"
required-features = ["wow"]

[[example]]
name = "talents"
required-features = ["wow"]

[[example]]
name = "pets"
required-features = ["wow"]

[[example]]
name = "mythic-keystone"
required-features = ["wow"]

[[example]]
name = "auctions"
required-features = ["wow"]

[[example]]
name = "account-profile"
required-features = ["wow", "user"]

[[example]]
name = "character-collections"
required-features = ["wow", "user"]

[[example]]
name = "character-equipment"
required-features = ["wow", "user"]
