[package]
name = "battlenet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wow = []
user = []
redis = ["dep:redis"]
db-sqlite = ["dep:sqlx", "sqlx/sqlite"]
db-postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/tls-native-tls"]
wow-classic = []
diablo = []
hearthstone = []
starcraft = []

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
log = "0.4"
num-format = "0.4.4"
redis = { version = "0.27", optional = true }
reqwest = { version = "0.12.4", features = ["multipart", "json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.8", optional = true, features = ["runtime-tokio", "chrono", "json"] }
thiserror = "1.0.60"
time = "0.3.36"
tokio = { version = "1.44", features = ["full"] }

# model_macro helps generate boilerplate code for the models
model-macro = { path = "./model-macro" }

[[example]]
name = "get-client-token"
required-features = ["wow"]

[[example]]
name = "char-profile"
required-features = ["wow", "user"]

[[example]]
name = "auction-play"
required-features = ["wow"]

[[example]]
name = "mounts"
required-features = ["wow"]

[[example]]
name = "items"
required-features = ["wow"]

[[example]]
name = "achievements"
required-features = ["wow"]

[[example]]
name = "professions"
required-features = ["wow"]

[[example]]
name = "pvp-seasons"
required-features = ["wow"]

[[example]]
name = "realms"
required-features = ["wow"]

[[example]]
name = "creatures"
required-features = ["wow"]

[[example]]
name = "spells"
required-features = ["wow"]

[[example]]
name = "talents"
required-features = ["wow"]

[[example]]
name = "pets"
required-features = ["wow"]

[[example]]
name = "mythic-keystone"
required-features = ["wow"]

[[example]]
name = "auctions"
required-features = ["wow"]

[[example]]
name = "account-profile"
required-features = ["wow", "user"]

[[example]]
name = "account-profile-cached"
required-features = ["wow", "user", "redis", "db-sqlite"]

[[example]]
name = "character-collections"
required-features = ["wow", "user"]

[[example]]
name = "character-equipment"
required-features = ["wow", "user"]

[[example]]
name = "full-toon"
required-features = ["wow", "user"]

[workspace]
members = ["model-macro", "ktoons/src-tauri"]
